Fix overlapping navbars on narrow mobile devices.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -301,11 +301,6 @@ footer nav span {
   footer {
     margin-bottom: 2.5%;
   }
-  .column_2:hover {
-    dropdown-content {
-      display: none;
-    }
-  }
 }
 
 @media only screen and (max-width: 641px) {
@@ -319,17 +314,12 @@ footer nav span {
     text-align: center;
   }
   .navbar {
-    display: none:
+    display: none;
   }
   .mobile-navbar {
     display: inline-block;
   }
   .dropdown-content {
     width: 95%;
-  }
-  .column_2:hover {
-    .dropdown-content {
-      display: none;
-    }
   }
 }
